<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/colorPrimary"
    android:layout_height="match_parent"
    tools:context=".activity.SubmitActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_height="?attr/actionBarSize"
        android:layout_width="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="69dp"
            android:src="@drawable/launch"
            android:adjustViewBounds="true"
            android:contentDescription="@string/submit" />
    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/project_submission"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="60dp"
        android:textColor="@android:color/holo_orange_light"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textAlignment="center"
        android:gravity="center_horizontal" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/line_gradient"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/first_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/first_name"
        android:textSize="20sp"
        android:padding="10dp"
        android:maxLength="10"
        android:background="@drawable/edit_text"
        android:inputType="text"
        android:layout_marginStart="16dp"
        android:importantForAutofill="no"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider"
        app:layout_constraintEnd_toStartOf="@id/guideline"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="8dp" />

    <EditText
        android:id="@+id/last_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text"
        android:hint="@string/last_name"
        android:textSize="20sp"
        android:padding="10dp"
        android:maxLength="10"
        android:inputType="text"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="50dp"
        app:layout_constraintStart_toStartOf="@id/guideline"
        android:importantForAutofill="no"
        app:layout_constraintTop_toBottomOf="@id/divider"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="16dp" />

    <EditText
        android:id="@+id/email_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_address"
        android:textSize="20sp"
        android:background="@drawable/edit_text"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@id/first_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:importantForAutofill="no"/>

    <EditText
        android:id="@+id/github_link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/github_link"
        android:background="@drawable/edit_text"
        android:textSize="20sp"
        android:inputType="text"
        android:padding="10dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@id/email_address"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:onClick="onSubmitProject"
        android:textSize="25sp"
        android:layout_marginTop="50dp"
        android:background="@drawable/oval_orange"
        android:textColor="@android:color/white"
        android:textAllCaps="false"
        android:paddingStart="50dp"
        android:paddingEnd="50dp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/github_link"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>